petite verification des branches

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_TIMEZONE='Africa/Nairobi'
+APP_LOCALE=fr
 APP_KEY=base64:WBepY5R5cDHbgepxzZf60nhhvtRtsI3Mc50WlI1Pjgc=
 APP_DEBUG=true
 APP_URL=http://localhost
