--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-APP_NAME=Laravel
+APP_NAME='Upskill CONGE'
 APP_ENV=local
-APP_KEY=
+APP_TIMEZONE='Africa/Nairobi'
+APP_LOCALE=fr
+APP_KEY=base64:WBepY5R5cDHbgepxzZf60nhhvtRtsI3Mc50WlI1Pjgc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,13 +13,13 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=Laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
