--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/ui": "^3.4",
         "league/flysystem-aws-s3-v3": "3.0",
         "symfony/http-client": "^6.1",
-        "symfony/mailgun-mailer": "^6.1"
+        "symfony/mailgun-mailer": "^6.1",
+        "yajra/laravel-datatables-oracle": "^10.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
