--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_NAME='Upskill Conge'
 APP_ENV=local
 APP_TIMEZONE='Africa/Nairobi'
 APP_LOCALE=fr
+APP_KEY=base64:WBepY5R5cDHbgepxzZf60nhhvtRtsI3Mc50WlI1Pjgc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
