--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^2.9.11"
     },
     "dependencies": {
-        "chart.js": "^3.9.1"
+        "chart.js": "^3.9.1",
+        "pm2": "^5.2.0"
     }
 }
